--- a/apt-fast.conf
+++ b/apt-fast.conf
@@ -11,7 +11,7 @@
 #
 # Default: apt-get
 #
-#_APTMGR=apt-get
+_APTMGR=apt
 
 
 # Enable DOWNLOADBEFORE to suppress apt-fast confirmation dialog and download
@@ -19,7 +19,7 @@
 #
 # Default: dialog enabled
 #
-#DOWNLOADBEFORE=true
+DOWNLOADBEFORE=true
 
 
 # Choose mirror list to speed up downloads from same archive. To select some
@@ -62,20 +62,20 @@
 #
 # Default: 5
 #
-#_MAXNUM=5
+_MAXNUM=24
 
 
 # Maximum number of connections per server
 # Default: 10
 #
-#_MAXCONPERSRV=10
+_MAXCONPERSRV=16
 
 
 # Download file using given number of connections
 # If more than N URIs are given, first N URIs are used and remaining URIs are used for backup.
 # If less than N URIs are given, those URIs are used more than once so that N connections total are made simultaneously.
 #
-#_SPLITCON=8
+_SPLITCON=24
 
 
 # Split size i.e. size of each piece
@@ -90,7 +90,7 @@
 # inorder: selects pieces in sequential order starting from first piece
 # geom: selects piece which has minimum index like inorder, but it exponentially increasingly keeps space from previously selected pieces
 #
-#_PIECEALGO="default"
+_PIECEALGO="default"
 
 
 # Downloadmanager listfile
